fixed horizontal scrolling and changed background color black

--- a/client/src/components/TextBubble/style.css
+++ b/client/src/components/TextBubble/style.css
@@ -1,10 +1,10 @@
 a {
-    color: black;
+    color: rgb(255, 255, 255);
 
 }
 
 a:hover {
-    color: rgb(26, 26, 26);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
@@ -22,6 +22,7 @@ a:hover {
 }
 
 .main-text-font {
+    color: white;
     font-family: 'Nanum Myeongjo', serif;
     text-align: center;
 }
