--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -9,7 +9,8 @@ body {
 
 
 .row-height {
-    height: 60vh
+    height: 40vh;
+    margin-bottom: 10%;
 }
 
 .full-view { /* Makes component take up entire screen */
@@ -19,9 +20,9 @@ body {
 }
 
 .main-info {
-    background: linear-gradient(90deg, rgb(19, 21, 22) 0%, rgb(3, 5, 7) 25%,rgb(0, 0, 0) 50%,rgb(0, 0, 0) 75%);
-    height: 100%;
+    /* background: linear-gradient(90deg, rgb(19, 21, 22) 0%, rgb(3, 5, 7) 25%,rgb(0, 0, 0) 50%,rgb(0, 0, 0) 75%); */
     box-shadow: inset 0px 0px 30px rgba(7, 89, 136, 0.616);
+    padding: 5% 5% 5% 5%;
 }
 
 .main-info1 {
@@ -35,16 +36,22 @@ body {
     position: absolute;
 }
 
+.scroll-row {
+    padding-bottom: 5%;
+}
+
 .main-image-container {
-    background-color: rgb(7, 15, 15);
+    background-color: rgb(0, 0, 0);
     height: 100%;
     padding: 0;
     margin: 0;
-    
+    position: relative;
 }
 
 div::-webkit-scrollbar { /*SCROLL BAR*/
-    width: 12px;
+    width: 20px;
+    position: absolute;
+    bottom: 0;
 }
 
 div::-webkit-scrollbar-track {
@@ -55,13 +62,15 @@ div::-webkit-scrollbar-track {
 
 div::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(7, 7, 7, 0.5);
+    box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
 }
 
 .scrolling-wrapper{
+    height: 100%;
     overflow-x: auto;
-    
+    padding: auto;
+    margin: auto;
 }
 
 .section-padding {
@@ -115,7 +124,7 @@ div::-webkit-scrollbar-thumb {
     margin-left: 15%;
     margin-right: 15%;
     box-shadow: 5px 5px 5px 5px rgba(0, 195, 255, 0.109);
-    background-color: rgba(255, 255, 255, 0.39);
+    background-color: rgba(0, 0, 0, 0.931);
 
 }
 
@@ -136,7 +145,9 @@ div::-webkit-scrollbar-thumb {
         height: 100%;
     }
 
-  
+    .row-height {
+        height: 40vh
+    }
     
     }
 
@@ -145,7 +156,9 @@ div::-webkit-scrollbar-thumb {
             min-height: 100%;
         }
 
-    
+        .row-height {
+            height: 40vh
+        }
         
         }
     
@@ -153,7 +166,9 @@ div::-webkit-scrollbar-thumb {
         .r100 {
             min-height: 100%;
         }
-            
+        .row-height {
+            height: 60vh
+        }  
         
         }
     
